--- a/templates/main.html
+++ b/templates/main.html
@@ -10,13 +10,19 @@
         {% include 'header.html' %}
         <div class="container">
             <div class="row">
+                <div class="col-lg-2 p-4">
+                    {% include 'sidebar.html' %}
+                </div>
                 <div class="col-lg-8 p-4">
                     {% block content %}
                     {% endblock %}
                     {% include 'pagination.html' %}
                 </div>
+
             </div>
+
         </div>
+
         {% include 'footer.html' %}
     </body>
 </html>
