--- a/templates/header.html
+++ b/templates/header.html
@@ -1,9 +1,20 @@
 {% load static %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="/">
             <img src="{% get_media_prefix %}logo_test.svg" alt="" width="50" height="50" class="d-inline-block align-text-mid">
             DevStarter
           </a>
+        {% if user.is_authenticated %}
+            <li class="nav-item"><a href="{% url 'users-profile' %}"> {{ user.username}}</a></li>
+            <form action="{% url 'logout' %}" method="post">
+                {% csrf_token %}
+                <a href="#" onclick="parentNode.submit();">Log out</a>
+            </form>
+            </li>
+        {% else %}
+            <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Log In</a></li>
+        {% endif %}
+          <a href="{% url 'social:begin' 'github' %}">GitHub</a>
     </div>
 </nav>
