change login button

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,20 +1,31 @@
 {% load static %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-        <a class="navbar-brand" href="/">
-            <img src="{% get_media_prefix %}logo_test.svg" alt="" width="50" height="50" class="d-inline-block align-text-mid">
+        <a class="navbar-brand d-flex align-items-center" href="/">
+            <img src="{% get_media_prefix %}logo_test.svg" alt="DevStarter" width="50" height="50" class="d-inline-block me-2">
             DevStarter
-          </a>
-        {% if user.is_authenticated %}
-            <li class="nav-item"><a href="{% url 'users-profile' %}"> {{ user.username}}</a></li>
-            <form action="{% url 'logout' %}" method="post">
-                {% csrf_token %}
-                <a href="#" onclick="parentNode.submit();">Log out</a>
-            </form>
-            </li>
-        {% else %}
-            <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Log In</a></li>
-        {% endif %}
-          <a href="{% url 'social:begin' 'github' %}">GitHub</a>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto align-items-center">
+                {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link btn btn-outline-light btn-sm mx-1" href="{% url 'users-profile' %}">{{ user.username }}</a>
+                    </li>
+                    <li class="nav-item">
+                        <form action="{% url 'logout' %}" method="post">
+                            {% csrf_token %}
+                            <a class="nav-link btn btn-outline-light btn-sm mx-1" href="#" onclick="this.parentNode.submit();">Log out</a>
+                        </form>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link btn btn-primary btn-sm mx-1" id="tab-login" href="{% url 'social:begin' 'github' %}">Войти в GitHub</a>
+                    </li>
+                {% endif %}
+            </ul>
+        </div>
     </div>
 </nav>
