add a theme dark mode

--- a/templates/header.html
+++ b/templates/header.html
@@ -25,6 +25,11 @@
                         <a class="nav-link btn btn-primary btn-sm mx-1" id="tab-login" href="{% url 'social:begin' 'github' %}">Войти в GitHub</a>
                     </li>
                 {% endif %}
+                <li class="nav-item">
+                    <button id="theme-toggle" class="btn btn-outline-secondary btn-sm mx-1">
+                        <span class="theme-icon">☀️</span>
+                    </button>
+                </li>
             </ul>
         </div>
     </div>
