--- a/templates/templates_app/create_repo.html
+++ b/templates/templates_app/create_repo.html
@@ -18,7 +18,8 @@
                 <p class="text-danger">{{ error }}</p>
             {% endif %}
             <div class="d-grid gap-3 d-md-block mt-2">
-                <button type="button" id="submit-btn" class="btn ntb-dark">Создать Репозиторий</button>
+                <!-- Временно btn-primary -->
+                <button type="button" id="submit-btn" class="btn btn-primary ntb-dark">Создать Репозиторий</button> <!-- Временно btn-primary -->
             </div>
         </form>
     </div>
