--- a/templates/main.html
+++ b/templates/main.html
@@ -3,25 +3,34 @@
     <head>
         <meta charset="UTF-8">
         <title>{{ title }}</title>
+        {% load static %}
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link href="{% static 'css/styles.css' %}" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </head>
-    <body class="d-flex flex-column min-vh-100">
+    <body class="d-flex flex-column min-vh-100 light-theme head">
         {% include 'header.html' %}
-        <div class="container-fluid">
-            <div class="row">
-                {% if show_sidebar %}
-                    <div class="col-lg-2 p-4">
-                        {% include 'sidebar.html' %}
+        <div class="content-wrapper">
+            {% if is_home %}
+                <div class="image-column left-image"></div>
+                <div class="image-column right-image"></div>
+            {% endif %}
+            <main class="container-fluid flex-grow-1">
+                <div class="row">
+                    {% if show_sidebar %}
+                        <div class="col-lg-2 p-4">
+                            {% include 'sidebar.html' %}
+                        </div>
+                    {% endif %}
+                    <div class="col-lg-{{ show_sidebar|yesno:'10,12' }} p-4 main-content">
+                        {% block content %}
+                        {% endblock %}
+                        {% include 'pagination.html' %}
                     </div>
-                {% endif %}
-                <div class="col-lg-{{ show_sidebar|yesno:'10,12' }} p-4">
-                    {% block content %}
-                    {% endblock %}
-                    {% include 'pagination.html' %}
                 </div>
-            </div>
+            </main>
         </div>
         {% include 'footer.html' %}
+        <script src="{% static 'js/theme-toggle.js' %}"></script>
     </body>
 </html>
