--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -7,7 +7,7 @@
         <ul class="list-group">
             {% if categories %}
                 {% recursetree categories %}
-                    <li class="list-group-item">
+                    <li class="list-group-item link-category">
                         <a href="{{ node.get_absolute_url }}">{{ node.name }}</a>
                         {% if not node.is_leaf_node %}
                             <ul class="list-group">
