add preloader gif

--- a/templates/templates_app/create_repo.html
+++ b/templates/templates_app/create_repo.html
@@ -9,6 +9,7 @@
         </div>
         <!-- Прелоадер (скрыт по умолчанию) -->
         <div id="loader" style="display:none; text-align:center;">
+            <img src="{% get_media_prefix %}images/preloader.svg" alt="Загрузка" style="width: 100px; height: 100px;">
             <p>Загрузка... Пожалуйста, подождите.</p>
         </div>
         <form id="repo-form" method="post">
