--- a/templates/templates_app/templates.html
+++ b/templates/templates_app/templates.html
@@ -5,31 +5,29 @@
     <div class="col-lg-10">
         <h1 class="mb-4">{{ title }}</h1>
         {% if templates %}
-        <table class="table table-striped table-hover">
-            <thead>
-                <tr>
-                    <th scope="col">Название</th>
-                    <th scope="col">Описание</th>
-                    <th scope="col">Категория</th>
-                    <th scope="col">Действия</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for template in templates %}
-                <tr>
-                    <td>{{ template.name }}</td>
-                    <td>{{ template.description|truncatewords:10 }}</td>
-                    <td><a href="{{ template.category.get_absolute_url }}" class="btn btn-primary btn-sm">{{ template.category }}</a></td>
-                    <td>
-                        <a href="{% url 'download_template' template.id %}" class="btn btn-primary btn-sm">Скачать</a>
-                        {% if user.is_authenticated %}
-                            <a href="{% url 'create-repo' template.id %}" class="btn btn-success btn-sm">Создать репозиторий</a>
-                        {% endif %}
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+        <div class="accordion" id="templatesAccordion">
+            {% for template in templates %}
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="heading{{ template.id }}">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ template.id }}" aria-expanded="false" aria-controls="collapse{{ template.id }}">
+                        {{ template.name }}
+                    </button>
+                </h2>
+                <div id="collapse{{ template.id }}" class="accordion-collapse collapse" aria-labelledby="heading{{ template.id }}" data-bs-parent="#templatesAccordion">
+                    <div class="accordion-body">
+                        <p>{{ template.description }}</p>
+                        <p><strong>Категория:</strong> <a href="{{ template.category.get_absolute_url }}" class="btn btn-primary btn-sm">{{ template.category }}</a></p>
+                        <div class="mt-3">
+                            <a href="{% url 'download_template' template.id %}" class="btn btn-primary btn-sm">Скачать</a>
+                            {% if user.is_authenticated %}
+                                <a href="{% url 'create-repo' template.id %}" class="btn btn-success btn-sm">Создать репозиторий</a>
+                            {% endif %}
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
         {% else %}
         <p class="text-center text-muted">Шаблоны не найдены.</p>
         {% endif %}
