--- a/templates/header.html
+++ b/templates/header.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
         <a class="navbar-brand d-flex align-items-center" href="/">
-            <img src="{% get_media_prefix %}logo_test.svg" alt="DevStarter" width="50" height="50" class="d-inline-block me-2">
+            <img src="{% get_media_prefix %}logo.svg" alt="DevStarter" width="80" height="80" class="d-inline-block me-3 logo-img">
             DevStarter
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
