--- a/templates/accounts/password_reset_complete.html
+++ b/templates/accounts/password_reset_complete.html
@@ -1,10 +1,10 @@
 {% extends "main.html" %}
 
-{% block title %}Password reset complete{% endblock %}
+{% block title %}Восстановление пароля завершено{% endblock %}
 
 {% block content %}
-    <h1>Password reset complete</h1>
-    <p>Your new password has been set.
-        You can log in now on the <a href="{% url 'login' %}">log in page</a>.
+    <h1>Восстановление пароля завершено</h1>
+    <p>Ваш новый пароль успешно обновлён.
+        Мы можете войти в аккаунт на <a href="{% url 'login' %}">странице входа</a>.
     </p>
 {% endblock %}
