--- a/templates/accounts/password_reset_done.html
+++ b/templates/accounts/password_reset_done.html
@@ -1,10 +1,10 @@
 {% extends "main.html" %}
 
-{% block title %}Email Sent{% endblock %}
+{% block title %}Отправка письма{% endblock %}
 
 {% block content %}
-    <h1>Check your inbox.</h1>
-    <p>We've emailed you instructions for setting your password.
-        You should receive the email shortly!
+    <h1>Проверьте ваш ящик</h1>
+    <p>Мы отправили вам по электронной почте инструкции по установке пароля.
+            Вы должны получить это электронное письмо в ближайшее время!
     </p>
 {% endblock %}
