--- a/templates/accounts/change_password.html
+++ b/templates/accounts/change_password.html
@@ -1,6 +1,6 @@
 {% extends "main.html" %}
 {% block content %}
-    <h3>Change Your Password</h3>
+    <h3>Смена пароля</h3>
     {% if form.errors %}
         <div class="container d-flex allign-items-center justify-content-center">
             <div class="alert alert-warning alert-dismissible fade show w-50 d-block" role="alert">
@@ -14,18 +14,18 @@
 
     <form method="POST">
         {% csrf_token %}
-        <label>Old password</label>
+        <label>Старый пароль</label>
         <input type="password" class="form-control mb-1" name="old_password" autocomplete="new-password" required id="id_old_password" placeholder="Enter Old Password"/>
 
-        <label>New Password"</label>
+        <label>Новый пароль</label>
         <input type="password" class="form-control mb-1" name="new_password1" autocomplete="new-password"
         required id="id_new_password1" placeholder="Enter New Password"/>
 
-        <label for="id_new_password2">New password Confirmation</label>
+        <label for="id_new_password2">Повтор нового пароля</label>
         <input type="password" class="form-control mb-1" name="new_password2" autocomplete="new_password"
         required id="id_new_password2" placeholder="Confirm New Password"/>
 
-        <button type="submit" class="btn btn-primary btn-lg" id="reset">Update Password</button>
+        <button type="submit" class="btn btn-primary btn-lg" id="reset">Изменить пароль</button>
 
     </form>
 {% endblock content %}
