--- a/templates/accounts/logout.html
+++ b/templates/accounts/logout.html
@@ -3,9 +3,9 @@
 
 {% block content %}
     <div>
-        <h5>You have been logged out</h5>
+        <h5>Вы вышли из своего аккаунта</h5>
         <hr>
-        <a href="{% url 'login' %}">Log in again</a>
+        <a href="{% url 'login' %}">Войти снова</a>
     </div>
 
 
