--- a/templates/accounts/password_reset_confirm.html
+++ b/templates/accounts/password_reset_confirm.html
@@ -1,17 +1,17 @@
 {% extends "main.html" %}
 
-{% block title %}Enter new password{% endblock %}
+{% block title %}Ввод нового пароля{% endblock %}
 
 {% block content %}
     {% if validlink %}
-        <h1>Set a new password!</h1>
+        <h1>Установите новый пароль!</h1>
         <form method="POST">
             {% csrf_token %}
             {{ form.as_p }}
-            <input type="submit" value="Change my password">
+            <input type="submit" value="Сменить мой пароль">
         </form>
     {% else %}
-        <p>The password reset link was invalid, possibly because it has already been used. Please request a new password reset.</p>
+        <p>Ссылка для сброса пароля была неверной, возможно, потому, что она уже использовалась. Пожалуйста, запросите новый сброс пароля.</p>
 
     {% endif %}
 
