--- a/templates/accounts/password_reset_form.html
+++ b/templates/accounts/password_reset_form.html
@@ -1,14 +1,14 @@
 {% extends "main.html" %}
 
-{% block title %}Forgot Your Password?{% endblock %}
+{% block title %}Забыли свой пароль?{% endblock %}
 
 {% block content %}
-    <h1>Forgot your password?</h1>
-    <p>Enter your email address below, and we'll email instructions for setting a new one.</p>
+    <h1>Забыли свой пароль?</h1>
+    <p>Введите свой адрес электронной почты ниже, и мы вышлем вам по электронной почте инструкции по установке нового.</p>
 
     <form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
-        <input type="submit" value="Send me instructions!">
+        <input type="submit" value="Отправьте мне инструкцию!">
     </form>
 {% endblock %}
