--- a/templates/templates_app/category.html
+++ b/templates/templates_app/category.html
@@ -18,15 +18,15 @@
     </div>
 
     <div class="row justify-content-center">
-        <div class="col-12 col-md-8">
+        <div class="col-12 col-md-13"> <!-- Увеличил с col-md-8 до col-md-10 -->
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 {% for category in categories %}
                     <div class="col">
-                        <div class="card" style="width: 100%;">
-                            <div class="card-body">
+                        <div class="card"> <!-- h-100 для одинаковой высоты карточек -->
+                            <div class="card-body d-flex flex-column"> <!-- Flex для выравнивания -->
                                 <h5 class="card-title">{{ category.name }}</h5>
-                                <p class="card-text">{{ category.description|default:"Описание отсутствует" }}</p>
-                                <a href="{% url 'category_templates' slug=category.slug %}" class="btn btn-primary">
+                                <p class="card-text flex-grow-1">{{ category.description|default:"Описание отсутствует" }}</p>
+                                <a href="{% url 'category_templates' slug=category.slug %}" class="btn btn-primary mt-auto">
                                     К шаблонам
                                 </a>
                             </div>
